[package]
name = "codex-router"
version = "1.0.0"
edition = "2021"
description = "Standalone Anthropic↔OpenAI format converter with TLS bypass for internal CAs"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
bytes = "1.0"
futures-util = "0.3"
chrono = "0.4.44"
tower = "0.5.3"
tokio-native-tls = "0.3.1"
native-tls = "0.2.18"
