[package]
name = "codex-router"
version = "1.0.0"
edition = "2021"
description = "Standalone AnthropicŌåöOpenAI format converter with TLS bypass for internal CAs"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
bytes = "1.0"
futures-util = "0.3"
chrono = "0.4.44"
tower = { version = "0.5.3", features = ["util"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.18"
tower-http = { version = "0.6.8", features = ["trace", "set-header"] }
tracing = "0.1.44"
http = "1.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"